Fix navbar spacing issues

--- a/src/scss/phy/header.scss
+++ b/src/scss/phy/header.scss
@@ -174,6 +174,7 @@ header {
     .accordion-button {
       font-family: $primary-font;
       font-size: 1rem !important; // RS... :(
+      line-height: 28px; // same height as the My Isaac icon
       color: $color-neutral-500;
       transition: none;
     }
